Migrate from deprecated boxed primitive constructors to their replacements. E.g., `new Integer(...)` becomes `Integer.valueOf(...)`.
The boxed primitive constructors are deprecated **for removal**. That means these APIs _will be deleted_ in a future JDK release and this library _will stop compiling_!

NOTE: if piper is _not_ the source of truth for this 3p library, please work with upstream maintainers to land this change (it is your responsibility to do so --- see "Review & accept maintenance changes" @ go/thirdparty/responsibilities#owner).

More info: go/boxed-primitive-constructors-lsc b/321209431

Tested:
    TAP --sample ran all affected tests and none failed
    http://test/OCL:608804363:BASE:608763264:1708480783015:e2655798
PiperOrigin-RevId: 608820838